# security-chat

./: .env  .env.production.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  QWEN.md  README.md  TAURI_FEASIBILITY.md  TAURI_REFACTOR_PLAN.md  deploy.sh  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: cd.yml  ci.yml  performance.yml
.qwen/: builds.json
apps/backend/: .env  .env.development  .env.example  Dockerfile  Dockerfile.prod  README.md  data-source.ts  docker-compose.test.yml  jest.config.cjs  package.json  push-to-acr.sh  tsconfig.json
apps/desktop/: .env.development  .env.example  README.md  REVIEW_ISSUES.md  components.json  index.html  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.electron.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/signal/: Cargo.toml
apps/desktop/src-tauri/signal/src/: double_ratchet.rs  lib.rs  prekeys.rs  session.rs  x3dh.rs
apps/desktop/src-tauri/src/: file_commands.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/api/: commands.rs  mod.rs
apps/desktop/src-tauri/src/crypto/: keychain.rs  mac_keychain.rs  media.rs  mod.rs  secure_key_provider.rs
apps/desktop/src-tauri/src/db/: commands.rs  local_store.rs  mod.rs  sqlite_store.rs
apps/desktop/src-tauri/src/signal/: cipher.rs  cipher.rs.backup  group_session.rs  keys.rs  mod.rs  sender_keys.rs  session.rs  store.rs  store.rs.backup  x3dh.rs
apps/mobile/: .env.example  App.tsx  README.md  app.json  package.json
docs/: desktop-voice-calls.md
infra/docker/: DEPLOY.md
nginx/: nginx.conf
skills/backend/: skill.md
skills/desktop/: skill.md
skills/mobile/: skill.md
test-results/: .last-run.json
test-results/tests-comprehensive-e2e-te-2ef9d--Chat-全面端到端测试-5-重新登录和历史消息测试/: error-context.md
tests/: comprehensive-e2e-test.spec.ts  message-test.spec.ts  signal-core-test.spec.ts  signal-e2e-full-test.spec.ts  signal-e2e-test.spec.ts  signal-signature-test.spec.ts
tests/benchmarks/: message-latency.bench.ts  (+2 more)
文档/: DataBase Design.md  PROGRESS.md  README-LOCAL-SETUP.md  Requirements Document.md  Signal 协议 E2EE 优化报告-2026-03-18.md  Signal 协议 E2EE 修复报告-2026-03-18.md  Signal 协议 E2EE 最终测试报告 -2026-03-18.md  Signal 协议 E2EE 测试待办清单.md  Signal 协议 E2EE 测试报告-2026-03-18.md  Signal 协议 E2EE 测试报告-Qwen-Code-B-2026-03-18.md  Signal 协议 E2EE 问题修复验证报告 -2026-03-18.md  Signal 协议实现状态分析-2026-03-18.md  Signal协议端到端加密技术开发方案.md  V1-Backend-Production-Baseline.md  playwright-e2e-report-2026-03-16.md  qwen_analysis.md  总体技术设计方案.md  桌面端深度测试报告-2026-03-01.md  桌面端验证记录-2026-02-28.md
(+464 files in other folders)
